tests/bad/tc4018-cue_settings_delimiter_bad_01.vtt
WEBVTT

00:00.000 --> 00:10.000line:68%
Payload